--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-<link rel="stylesheet" href="main.css">
-<h1>hello</h1>
+<html>
+  <head>
+    <link rel="stylesheet" href="main.css">
+  </head>
+  <body>
+    
+  </body>
+</html>
